tests/tests_mod/ui/incomplete_syntax_err.rs
multiconst::multiconst!{
    #[]
}

multiconst::multiconst!{
    const
}

multiconst::multiconst!{
    const A
}

multiconst::multiconst!{
    const B:
}

multiconst::multiconst!{
    const C: u32
}

multiconst::multiconst!{
    const D: u32 =
}

multiconst::multiconst!{
    const E: u32 = 10
}

fn main(){}